<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">


    <LinearLayout style="@style/ll_centre_vertical_16m_style">

        <TextView
            android:text="@string/shoe_store"
            style="@style/main_heading_style" />

        <TextView
            style="@style/et_heading_style"
            android:text="@string/e_mail"/>

        <EditText
            android:id="@+id/et_email"
            style="@style/et_style"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>


        <TextView
            style="@style/et_heading_style"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_pass"
            style="@style/et_style"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/bt_register"
            style="@style/bt_style"
            android:text="@string/register"/>

        <!-- Divider -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:gravity="center_horizontal"/>


        <Button
            android:id="@+id/bt_login"
            style="@style/bt_style"
           android:text="@string/login"/>
    </LinearLayout>
</layout>