<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

    <data>
        <variable
            name="shoeListingViewModel"
            type="com.udacity.shoestore.shoelisting.ShoeListingViewModel" />
    </data>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/ll_centre_vertical_16m_style"
        android:padding="8dp">

        <!-- Shoe Name -->
        <TextView
            style="@style/et_heading_style"
            android:text="@string/shoe_name"/>

        <EditText
            android:id="@+id/et_shoe_name"
            style="@style/et_style"
            android:text="@={shoeListingViewModel.newShoe.name}"
            android:hint="@string/enter_your_shoe_name"
            android:inputType="text"/>

        <!-- Shoe Company -->
        <TextView
            style="@style/et_heading_style"
            android:text="@string/shoe_company"/>

        <EditText
            android:id="@+id/et_shoe_company"
            style="@style/et_style"
            android:text="@={shoeListingViewModel.newShoe.company}"
            android:hint="@string/enter_your_shoe_company"
            android:inputType="text"/>

        <!-- Shoe Size -->
        <TextView
            style="@style/et_heading_style"
            android:text="@string/shoe_size"/>

        <EditText
            android:id="@+id/et_shoe_size"
            style="@style/et_style"
            android:text="@={`` + shoeListingViewModel.newShoe.size}"
            android:hint="@string/hint_enter_your_shoe_size"
            android:inputType="numberDecimal"/>

        <!-- Shoe Description -->
        <TextView
            style="@style/et_heading_style"
            android:text="@string/shoe_description"/>

        <EditText
            android:id="@+id/et_shoe_desc"
            style="@style/et_style"
            android:text="@={shoeListingViewModel.newShoe.description}"
            android:hint="@string/hint_description"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cancel"
                style="@style/detail_btn_style"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/bt_save"
                android:enabled="false"
                android:text="@string/save"
                style="@style/detail_btn_style" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
</layout>