<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionFragment">

    <LinearLayout style="@style/ll_centre_vertical_16m_style">

        <TextView
            style="@style/main_heading_style"
            android:text="@string/instructions"/>

        <TextView
            style="@style/et_heading_style"
            android:text="@string/instruction_1"
            android:gravity="center_horizontal"
            android:textSize="24sp"/>


        <TextView
            style="@style/et_heading_style"
            android:gravity="center_horizontal"
            android:text="@string/instruction_2"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/bt_got_it"
            style="@style/bt_style"
            android:text="@string/got_it"/>
    </LinearLayout>
</layout>